fixes to font size on small screen.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
 html,
 body {
     font-family: Arial, Verdana, Helvetica, sans-serif;
-    font-size: 1.2em;
+    font-size: 1.5vw;
     margin: 0;
     padding: 0;
     background-color: rgba(255,255,255);
@@ -92,7 +92,7 @@ header {
 }
 
 header h1 {
-    font-size: 3em;
+    font-size: 5vw;
     margin: 10px;
 }
 
@@ -307,12 +307,18 @@ width: 2.5em;
 /*MOBILE PHONES & TABLETS */
 @media only screen and (max-width:800px) { 
 
+    header h1{
+        font-size: 8vw;
+    }
+
  body{
      width: 100%;
      margin: 0;
      padding: 0;
      height: 100%;
+     font-size: 3vw;
    }
+   
 
  main {
     width: 100%;
@@ -359,6 +365,7 @@ width: 2.5em;
         overflow-x: hidden;
         transition: 0.5s;
         padding-top: 10px;
+        border: none;
     }
  
     #logo{
@@ -387,7 +394,7 @@ width: 2.5em;
         position: -webkit-sticky;
         position: sticky;
         top: 5px;
-        font-size: 2em;
+      font-size: 7vw;
         margin-left: auto;
         margin-right: auto;
         background: none;
@@ -483,6 +490,10 @@ width: 2.5em;
   @media only screen and (max-width: 500px) {
     .imgResize {
       width: 100%;
+    }
+
+    #navOpenBtn{
+        font-size: 6vw;
     }
 
 }
